Extract things to modules, and make event generation procedural (1st iteration)

--- a/index.html
+++ b/index.html
@@ -1,1 +1,4 @@
 <script src="./dist/main.js"></script>
+<h1>AutoDM 7DRL 2019 by Slashie</h1>
+<p>Open the JavaScript Console and play.</p>
+<p>Requires a ES6 ready browser (no babel yet)</p>
