--- a/src/index.html
+++ b/src/index.html
@@ -10,10 +10,10 @@
     <meta name="format-detection" content="telephone=no">
     <style>
         @font-face {
-          font-family: "lcd";
+          font-family: "Augusta";
           font-style: normal;
           font-weight: 400;
-          src: url("assets/alarm clock.ttf");
+          src: url("assets/Augusta.ttf");
         }
         html,
         body {
