--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,12 @@
           font-weight: 400;
           src: url("assets/Augusta.ttf");
         }
+        @font-face {
+          font-family: "OfenbacherSchwabCAT";
+          font-style: normal;
+          font-weight: 400;
+          src: url("assets/OfenbacherSchwabCAT.ttf");
+        }
         html,
         body {
             margin: 0;
