Show title screen

--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,13 @@
           font-weight: 400;
           src: url("assets/OfenbacherSchwabCAT.ttf");
         }
+        @font-face {
+          font-family: "Deutsch";
+          font-style: normal;
+          font-weight: 400;
+          src: url("assets/Deutsch.ttf");
+        }
+        
         html,
         body {
             margin: 0;
