--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>AutoDM</title>
+    <title>Heroes of Noresskia - 2019 7DRL</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <meta name="HandheldFriendly" content="True">
-    <meta name="MobileOptimized" content="320">
+    <meta name="MobileOptimized" content="1024">
     <meta http-equiv="cleartype" content="on">
     <meta name="format-detection" content="telephone=no">
     <style>
