--- a/src/index.html
+++ b/src/index.html
@@ -27,12 +27,22 @@
           font-weight: 400;
           src: url("assets/Deutsch.ttf");
         }
-        
+
         html,
         body {
             margin: 0;
             padding: 0;
+            background-color: black;
+            height: 100%;
         }
+        #content {
+            height: 100%;
+        }
+        #content canvas {
+            margin-left: auto;
+            margin-right: auto;
+        }
+
     </style>
 </head>
 
